# nitro

./: .gitignore  CMakeLists.txt  main.cpp
nitro/: CMakeLists.txt
nitro/ext/vcl-2.01.04/: CMakeLists.txt
nitro/include/nitro/: at.h  const_at.h  def_alloc.h  def_const_view.h  def_vector.h  def_view.h  expr.h  flat_repr.h  indexed.h  lane.h  lane_at.h  lane_const_at.h  macros.h  nitro.h  par_at.h  par_at_const_expr.h  par_at_expr.h  par_const_at.h  par_const_view.h  par_lane_at.h  par_lane_const_at.h  par_vector.h  par_view.h  pprint.h  set.h  tuple.h  type_list.h  vec3.h  vector.h  vector_decl.h  vfunc.h  view.h
nitro/include/nitro/at/: at.h  par.h  par_at.h
nitro/include/nitro/const_at/: const_at.h  par_const_at.h
nitro/include/nitro/const_iterator/: def.h  par.h
nitro/include/nitro/const_view/: const_view.h  def.h  def_const_view.h  par.h  par_const_view.h
nitro/include/nitro/iterator/: def.h  impl.h  par.h
nitro/include/nitro/lane_at/: lane_at.h  par_lane_at.h
nitro/include/nitro/lane_const_at/: lane_const_at.h  par_lane_const_at.h
nitro/include/nitro/set/: impl.h
nitro/include/nitro/vector/: def.h  def_alloc.h  def_vector.h  par.h  par_vector.h  vector.h  vector_decl.h
nitro/include/nitro/view/: def.h  def_view.h  par.h  par_view.h
